# LATS-Implementation-For-AKA-AI

./: .gitignore  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  test_api.py
agent/: TreeSearchCrew.py  llm.py  models.py
agent/configs/: agents.yaml  tasks.yaml
api/: __init__.py
api/routes/: __init__.py  lats.py
core/: config.py
core/lats/: __init__.py  context_manager.py  execution_engine.py  llm_client.py  mcts_controller.py  prompt_manager.py  reward.py  state.py  tree.py
interfaces/: executor.py  strategy.py
java_client_tool/: __init__.py  base.py  context_tool.py
logic/: greedy_strategy.py
models/: __init__.py  lats_models.py  node.py
orchestrator/: event_store.py  terminator.py
prompts/: __init__.py
prompts/unified/: __init__.py  expand_batch.txt  expand_targeted.txt  initialize.txt  reflection.txt
services/: agent_service.py
tests/: test_mcts_controller.py  test_reward_context.py  test_state.py
